[project]
name = "llm-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
]
